# theturboturnip.github.io

./: .gitignore  .gitmodules  CNAME  Gemfile  Justfile  NOTICE.md  README.md  _config.yml  about.md  blog.md  index.html  package.json  portfolio.md  pyproject.toml  robots.txt
.bundle/: config
_apps/turnip_rundown/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map  (+1 more)
_cv_archive/: 2025-09-voleon.md
_data/: authors.yml  navigation.yml  projects.yml
_drafts/: 2022-06-04-hacking-lcu-shadows.md
_includes/: archive-single-cv.html  archive-single-talk-cv.html  archive-single-talk.html  archive-single.html  head.html  masthead.html  my-body.html  page__hero.html  read-time.html  sidebar-author-profile.html  sidebar.html
_layouts/: custom_portfolio.html  cv_archive.html  project_landing.html  single.html  talk.html
_pages/: about.md  academia.md  cv.md  cv_archive.md  docs.md
_posts/: 2022-12-05-cheri-rvv-condensed.md  2023-07-07-my-first-article.md
_projects/: get-to-the-top.md  yk_gmd_io.md
_publications/: 2021-05-01-fluid-dynamics-opt-viz.md  2022-06-06-capability-protection-scalable-vectors.md
_sass/: _archive.scss  _cv_archive.scss  _footer.scss  _masthead.scss  _navigation.scss  _page.scss  _sidebar.scss  _syntax.scss  _utilities.scss  _variables.scss  my-style.scss
files/: 2022-09-19-RISE_Presentation.pptx
resumegen/: .gitignore  Justfile  OLDresume.json  buildcv.py  configs.json  configs.toml  custom_turnip_text.py  package.json  plugin_table.py  render.sh  rendermarkdown.py  resume.json  resume.toml
(+369 files in other folders)
