[project]
name = "theturboturnip.github.io"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Stark" }]
requires-python = "~=3.11.0"
dependencies = [
    "pandas>=2.1.0,<3",
    "turnip-text",
]

[dependency-groups]
dev = ["mypy>=1.5.1,<2"]

[tool.uv]
package = false

[tool.uv.sources]
turnip-text = { path = "turnip_text", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
